doc:
  o working html doc generation from TEX sources
  o SPARC32 (v7/v8) calling convention description
  o SPARC64 (v9) calling convention description
bindings:
  o better documentation, removed relative path dependencies, general cleanup
  o python: updated to latest signature format (was still on 0.1)
  o java: rewritten (old version was never complete, anyways)
buildsys:
  o cmake: made to work on systems without C++ compiler (thanks Franklin Mathieu)

Version 0.9 (2015/12/31)
dyncall:
  o ARM64 support (AAPCS64 on Linux & Apple's derived version on iOS)
  o armhf calling convention support for ARM32
  o PPC64 support, including syscalls (thanks Masanori Mitsugi!)
  o introduced dcArgF and dcVArgF for flexible/convenient argument binding (works like dcCallF/dcVCallF but without the function call)
  o using -fPIC by default for FreeBSD
  o PPC32 linux syscall support
  o fixed return value errors for ARM32 on some platforms (e.g. freebsd/arm32, nintendo ds); arm & thumb mode
dyncallback:
  o ARM64 support (AAPCS64 on Linux, Apple's derived version on iOS)
  o armhf calling convention support for ARM32
  o PPC64 support (thanks Masanori Mitsugi!)
  o PPC32 System V support (Linux)
  o fix for PPC32 Darwin/OS X
  o more intuitive specification of callback return type
doc:
  o added ARM64 support info and calling convention documentation
  o added ARM32 armhf section
  o added PPC64 support info
  o cleanup, brought all up to date, etc.
tests:
  o callf test covers new argf interface
  o several fixes to some test suites
buildsys:
  o more flexible testsuite build and 'pack' target for convenience
  o fixes/additions for OS X universal builds
  o added iOS universal build support for armv7/arm64
  o helper script for generic .elf -> EBOOT.PBP creation for PSP
  o Sun make fixes for C++ code in test suite
bindings:
  o erldc: Erlang binding (thanks Erik!)
infrastructure:
  o moved to hg
  o moved bindings to own repository

Version 0.8 (2014/03/24)
buildsys: