@@ -18,6 +18,7 @@ add_subdirectory(plain)
 add_subdirectory(suite)
 add_subdirectory(callf)
 add_subdirectory(nm)
+add_subdirectory(dynload_plain)
 add_subdirectory(resolve_self)
 add_subdirectory(thunk)
 add_subdirectory(malloc_wx)
