@@ -28,6 +28,8 @@ bindings:
   o better documentation, removed relative path dependencies, general cleanup
   o python: updated to latest signature format (was still on 0.1)
   o java: rewritten (old version was never complete, anyways)
+tests:
+  o added new dynload_plain test covering basic use of all dynload functions
 buildsys:
   o cmake: made to work on systems without C++ compiler (thanks Franklin Mathieu)
 
